# template-sveltekit-wasm

./: Cargo.toml  Dockerfile  README.md  package.json  svelte.config.js
.github/: dependabot.yml
.github/workflows/: desktop.yml  rust.yml
src/routes/: +page.svelte
wasm/: Cargo.toml  package.json
