[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "wasm"
edition = "2021"
homepage = "https://github.com/FL03/template-sveltekit-wasm/wiki"
keywords = ["wasm"]
license = "Apache-2.0"
name = "wasm"
repository = "https://github.com/template-sveltekit-wasm/proton"
version = "0.1.0"

[features]
default = ["core"]
full = ["core", "extras"]

core = []
extras = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm"
path = "src/lib.rs"
test = true

[build-dependencies]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { optional = true, version = "0.1.7" }
gloo = { features = ["futures"], version = "0.8.0"}
js-sys = "0.3.60"
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.89"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"

[dependencies.web-sys]
features = [
    "Window",
    "console"
]
 version = "0.3.60"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
